--- a/index.html
+++ b/index.html
@@ -5,24 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | QR code component</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    body { background-color: hsl(212, 45%, 89%); font-family: 'Outfit', sans-serif; }
+    .attribution { font-size: 11px; position: relative; text-align: center; top: 650px; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    .tile { background-color: hsl(0, 0%, 100%); border-radius: 20px; left: 50%; position: absolute; text-align: center; top: 50%; transform: translate(-50%, -50%); width: 325px; }
+    .tile h1 { color: hsl(218, 44%, 22%); font-size: 1.4em; margin: 5px 30px 0; }
+    .tile img { border-radius: 10px; margin: 15px; width: calc(100% - 30px);}
+    .tile p { color: hsl(220, 15%, 55%); margin: 0 30px; padding-bottom: 40px; }
   </style>
 </head>
 <body>
+  <div class="tile">
+    <img src="./images/image-qr-code.png" alt="QR code">
+    <h1>Improve your front-end skills by building projects</h1>
+    <br>
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </div>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Joshua</a>.
   </div>
 </body>
 </html>
